# credit-risk-ml

./: README.md  credit_risk.py  main.py  pyproject.toml
artifacts/: lightgbm_model.pkl  logistic_regression.pkl  model_metrics.csv  shap_importance.csv
data/: X_test.csv  X_train.csv  df_sample.csv  y_test.csv  y_train.csv
notebooks/: 01_preprocessing.ipynb  02_machine_learning.ipynb
