[project]
name = "credit-risk-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.4.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "shap>=0.52.0",
]
